Adding jdk11 options (#98)
* Adding jdk11 options

Signed-off-by: Olivier Lamy <olamy@apache.org>

Co-authored-by: Martin Schreier <m.stockhammer@web.de>