@@ -89,6 +89,21 @@ public class StartCassandraClusterMojo
     private int clusterSize;
 
     /**
+     * If <code>true</code>, the java options --add-exports and --add-opens will be added to the cassandra start. Which
+     * is needed, if cassandra runs with a Java runtime &gt;= 11
+     *
+     * @since 3.7
+     */
+    @Parameter(property="cassandra.addJdk11Options", defaultValue="false")
+    protected boolean addJdk11Options;
+
+    @Override
+    protected boolean useJdk11Options( )
+    {
+        return addJdk11Options;
+    }
+
+    /**
      * {@inheritDoc}
      */
     public void execute()
